dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__idle_wheel__recv_idle_wheel_does_not_mark_dead.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] TRACE m#task.recv_idle_wheel.drained[recv.0]=1
0 [main] TRACE m#task.recv_idle_wheel.drained[recv.0]=0
0 [main] TRACE m#task.recv_idle_wheel.drained[recv.0]=0
30 [main] TRACE c#test.recv_idle_wheel.receiver[task.wheel_drain]=1
30 [main] TRACE c#test.recv_idle_wheel.drain=1
30 [main] TRACE g#test.recv_idle_wheel.depth=-1
30 [main] TRACE c#idle.recv.expired=1
30 [main] TRACE m#task.recv_idle_wheel.drained[recv.0]=0
