dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__idle_wheel__send_idle_wheel_kept_alive_by_path_activity.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] DEBUG deriving sealer for credentials credentials=0xb825b05b860f8a17c74724ad21b1b2f3:0 peer_addr=127.0.0.1:4433 sender_idx=0
0 [main] TRACE g#send.context.count[send.0]=1
0 [main] TRACE m#task.idle_wheel.drained[send.0]=1
0 [main] TRACE m#task.idle_wheel.drained[send.0]=0
0 [main] TRACE m#task.idle_wheel.drained[send.0]=0
30 [main] TRACE c#test.idle_wheel.receiver[task.wheel_drain]=1
30 [main] TRACE c#test.idle_wheel.drain=1
30 [main] TRACE g#test.idle_wheel.depth=-1
30 [main] TRACE c#test.idle_wheel.sender[task.send_idle_wheel_drain]=1
30 [main] TRACE c#test.idle_wheel.enq=1
30 [main] TRACE g#test.idle_wheel.depth=0
30 [main] TRACE m#test.idle_wheel.depth_dist=0
30 [main] TRACE c#idle.send.rescheduled=1
30 [main] TRACE m#task.idle_wheel.drained[send.0]=1
30 [main] TRACE m#task.idle_wheel.drained[send.0]=0
50 [main] TRACE c#test.idle_wheel.receiver[task.wheel_drain]=1
50 [main] TRACE c#test.idle_wheel.drain=1
50 [main] TRACE g#test.idle_wheel.depth=-1
50 [main] TRACE g#send.context.count[send.0]=0
50 [main] DEBUG invalidating send context id=0x3825b05b860f8a17c74724ad21b1b2f3 sender_idx=0
50 [main] TRACE c#send.ack.drain[send.0]=0
50 [main] TRACE g#send.ack.depth[send.0]=0
50 [main] TRACE c#send.inflight.drain.expire[send.0]=0
50 [main] TRACE c#idle.send.expired=1
50 [main] TRACE m#task.idle_wheel.drained[send.0]=0
